@@ -32,13 +32,14 @@ import test_vdif
 import test_beamformer
 import test_imaging
 import test_progress
+import test_busy
 import test_mcs
 import test_sdf
 import test_meta
 
 
 __revision__  = "$Rev$"
-__version__   = "0.3"
+__version__   = "0.4"
 __author__    = "D.L.Wood"
 __maintainer__ = "Jayce Dowell"
 
@@ -79,6 +80,7 @@ class lsl_tests(unittest.TestSuite):
 		self.addTest(test_beamformer.beamformer_test_suite())
 		self.addTest(test_imaging.imaging_test_suite())
 		self.addTest(test_progress.progress_test_suite())
+		self.addTest(test_busy.busy_test_suite())
 		self.addTest(test_mcs.mcs_test_suite())
 		self.addTest(test_sdf.sdf_test_suite())
 		self.addTest(test_meta.metabundle_test_suite())
